# cmake_test

./: CMakeLists.txt  main.cpp
log_lib/: CMakeLists.txt  log_lib.cpp  log_lib.h  log_lib_internal.cpp  log_lib_internal.h
